--- a/css/styles.css
+++ b/css/styles.css
@@ -11329,3 +11329,41 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+  #botao{
+ background: linear-gradient(90deg,#253692,#0a1551);
+ display: block;
+ margin: 0 auto;
+ line-height: 40px;
+ padding: 10px 20px;
+ box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+ }
+ .carousel-item >img{
+    height: 70%;
+    width: 70%;
+    display: block;
+    margin: 0 auto;
+    padding: 0 2%;
+  }
+ .botao-flutuante {
+   position: fixed;
+   bottom: 20px;
+   right: 20px;
+   background: linear-gradient(90deg,#253692,#0a1551);
+   color: #fff;
+   padding: 10px 20px;
+   border-radius: 50%;
+   text-align: center;
+   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+   z-index: 9999;
+   font-size: 30px;
+ }
+@media screen and (max-width: 768px){
+ .carousel-item >img{
+  max-height: 90%;
+  max-width: 90%;
+  }
+  #botao{
+    width: 80%;
+     }
+             
+}
