--- a/css/styles.css
+++ b/css/styles.css
@@ -11365,5 +11365,11 @@ section#contact form#contactForm :-ms-input-placeholder {
   #botao{
     width: 80%;
      }
-             
+ .botao-flutuante{
+    background: transparent;
+    color: black;
+    font-size: 20px;
+    padding: 8px 15px;
+
+   }           
 }
