--- a/css/styles.css
+++ b/css/styles.css
@@ -10948,7 +10948,7 @@ header.masthead {
 @media screen and (max-width: 470px){
   header.masthead {
     
-    background-image: url("../imagens/logo.png");
+    background-image: url("../imagens/Screenshot_2023-05-08-09-13-09-731_com.android.chrome-edit.jpg");
     background-size: contain;
     padding-top: 8rem;
     padding-bottom: 0;
