--- a/css/styles.css
+++ b/css/styles.css
@@ -10958,6 +10958,7 @@ header.masthead {
 
 header.masthead .masthead-subheading {
   margin-top: 150px;
+  color: lightblue;
   font-size: 1.5rem;
   font-style: italic;
   line-height: 1.5rem;
