--- a/css/styles.css
+++ b/css/styles.css
@@ -10961,6 +10961,7 @@ header.masthead {
     background-size: contain;
     padding-top: 8rem;
     padding-bottom: 0;
+    background-size: cover;
   }
 
 }
